devops/ingress/frankenphp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frankenphp-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: frankenphp.local
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frankenphp
              port:
                number: 80
