devops/ingress/ingress-frankenphp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: my-web.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port: 
              number: 80
